API improvement #12